https://github.com/1217495055/pro.git

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>马蜂窝</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <!-- ajax接入 头部标题栏 -->
@@ -12,8 +13,135 @@
     </header>
     
     <!-- 工作区,内容盒子 -->
-    <div id="wasp-content-box">
+    <div class="contain">
+        <!-- 上面导航栏 -->
+        <div class='up_nav clearfix'>
+            <a href="#" class='bg_img1'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img2'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img3'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img4'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img5'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img6'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+            <a href="#" class='bg_img7'>
+                <p>自由行</p>
+                <p>旅行就要更自在</p>
+            </a>
+        </div>
+        <!-- 左边 -->
+        <div class='left_aside'>
+            <div class='aside_box'>
+                <a href="#">
+                    <img src="http://images.mafengwo.net/images/safety-prevention/index-link.png" width="218" height="31">
+                </a>
+            </div>
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">旅行家专栏</a></span>
+                    <a href="#">专栏首页</a>
+                </div>
+                <!-- 左边轮播图 -->
+                <div class='left_nav'>
 
+                </div>
+            </div>
+            <!-- 第二块 -->
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">旅游攻略推荐</a></span>
+                    <a href="#">更多</a>
+                </div>
+                <!-- 左边轮播图 -->
+                <div>
+                    <div class='aside_img'>
+                        <div>
+                            <a href="#">
+                                <img src="https://b4-q.mafengwo.net/s14/M00/17/57/wKgE2l0Tm2-AKk_4AAX8ylKuNVU60.jpeg?imageMogr2%2Fthumbnail%2F%21260x139r%2Fgravity%2FCenter%2Fcrop%2F%21260x139%2Fquality%2F100">
+                            </a>
+                            <span class='mark'>自由行攻略</span>
+                        </div>
+                        <h3><a href="#">塞班岛旅游怎么玩不枉此行，一篇攻略让你玩转塞...</a></h3>
+                    </div>
+                </div>
+            </div>
+            <!-- 第三块 -->
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">最新活动</a></span>
+                    <a href="#">查看全部></a>
+                </div>
+                <!-- 左边轮播图 -->
+                <div class='left_nav'>
+
+                </div>
+            </div>
+            <!-- 第四块 -->
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">旅游攻略推荐</a></span>
+                    <a href="#">更多</a>
+                </div>
+                <!-- 左边轮播图 -->
+                <div>
+                    <div class='aside_img'>
+                        <div>
+                            <a href="#">
+                                <img src="https://images.mafengwo.net/images/new-index/unknownTravel181120.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 第五块 -->
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">最新活动</a></span>
+                    <a href="#">查看全部></a>
+                </div>
+                <!-- 左边轮播图 -->
+                <div>
+                    <div class='aside_img'>
+                        <div>
+                            <a href="#">
+                                <img src="https://p1-q.mafengwo.net/s13/M00/FB/6B/wKgEaVx03pWACwV_AAB9EDqNfwg64.jpeg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+        <!-- 右边 -->
+        <div class='right_aside'>
+            <div>
+                <div class='right_nav clearfix'>
+                    <ul>
+                        <li class='active'><a href="#">热门游记</a><span></span>
+                        </li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- ajax接入 html低部 -->
