https://github.com/1217495055/pro.git

--- a/index.html
+++ b/index.html
@@ -135,12 +135,17 @@
             <div>
                 <div class='right_nav clearfix'>
                     <ul>
-                        <li class='active'><a href="#">热门游记</a><span></span>
+                        <li class='active'><a href="#">热门游记</a><span class='right_menu'><i class='menu_icon'></i>
+                        筛选</span>
                         </li>
-                        <li></li>
+                        <li><a href="#">最新发表</a></li>
                     </ul>
+                    <div class='right_nav_btn'>
+                        <a href="#"><i></i>写游记</a>
+                    </div>
                 </div>
             </div>
+            
         </div>
     </div>
 
