--- a/index.html
+++ b/index.html
@@ -126,6 +126,23 @@
                     </div>
                 </div>
             </div>
+            <!-- 第六块 -->
+            <div class='aside_box'>
+                <div class='aside_up clearfix'>
+                    <span><a href="#">马蜂窝旅游网最新资讯</a></span>
+                </div>
+                <!-- 左边轮播图 -->
+                <div>
+                    <ul class='aside_img'>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
 
 
         </div>
@@ -143,6 +160,137 @@
                     <div class='right_nav_btn'>
                         <a href="#"><i></i>写游记</a>
                     </div>
+                </div>
+                <div>
+                    <!-- 第一个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第二个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第三个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第四个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第五个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第六个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第七个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 第八个 -->
+                    <div class='r-item'>
+                        <div class='f-l r-img'><a href="#"><img src="img/index/wKgE2l0PTreAAvKGAAMfjHyhAto54.jpeg" alt=""></a></div>
+                        <div class='f-l r-wrapper'>
+                            <div>
+                                <p><a href="#">满足南方女孩对雪的所有幻想，北海道观光拍照之旅,北海道旅游</a></p>
+                                <p><a href="#">  # 写在前面 # 在某个闲来无事的下午，我心血来潮的翻了翻机票，发现 成都 至 曼谷 往返机票只要九百，于是开玩笑的问了问Q小妹： “走不走，去 曼谷 过周末，周五去，周末回？” “走哇！”...</a></p>
+                            </div>
+                            <div class='r_button'>
+                                <span class='r_ding'><a href="#" class='btn_ding'></a><em>201</em></span>
+                                <span class='r_place'><i></i><a href="#">北海道</a>，by</span>
+                                <span class='r_user'><a href="#"><img src="/img/index/wKgB3FFVC4eAZepPAAAsr7K5jhw40.jpeg" alt="">茹沈龙倪</a></span>
+                                <span class='r_nums'><i></i>3248/29</span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
             
