https://github.com/1217495055/pro.git

--- a/index.html
+++ b/index.html
@@ -134,12 +134,7 @@
                 <!-- 左边轮播图 -->
                 <div>
                     <ul class='aside_img'>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
             </div>
