https://github.com/1217495055/pro.git

--- a/index.html
+++ b/index.html
@@ -11,7 +11,34 @@
     <header>
         <iframe src="page/header/header.html" frameborder="0" width="100%" height="58px" scrolling="no"></iframe>
     </header>
-    
+
+    <!-- 首页轮播图 -->
+    <div class="slide-box">
+        <div class="slide-content">
+            <ul class="slide-imgs">
+                <li class="slide-imgs p-r">
+                    <a href=""><img src="img/index/122313213..jpg"></a>
+                    <div class="img-detail p-a">
+                        <p>断网的3天，消失在哈瓦那的旧时光里</p>
+                    </div>
+                </li>
+                <li class="slide-imgs p-r d-none" >
+                    <a href=""><img src="img/index/236223113..jpg"></a>
+                    <div class="img-detail p-a">
+                        <p>澳大利亚｜在馥芮白的故乡，喝杯咖啡才是正经事</p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="slide-nav p-a">
+                <li><img src="img/index/122313213..jpg"></li>
+                <li><img src="img/index/236223113..jpg"></li>
+                <li><img src="img/index/122313213..jpg"></li>
+                <li><img src="img/index/236223113..jpg"></li>
+            </ul>
+        </div>
+        <div class="search-container"></div>
+    </div>
+
     <!-- 工作区,内容盒子 -->
     <div class="contain">
         <!-- 上面导航栏 -->
