https://github.com/1217495055/pro.git

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- 首页轮播图 -->
     <div class="slide-box">
-        <div class="slide-content p-r">
-            <ul class="slide-imgs p-a">
+        <div class="slide-content">
+            <ul class="slide-imgs">
                 <li class="slide-imgs p-r">
                     <a href=""><img src="img/index/122313213..jpg"></a>
                     <div class="img-detail p-a">
@@ -161,7 +161,12 @@
                 <!-- 左边轮播图 -->
                 <div>
                     <ul class='aside_img'>
-                        <li><a href="#"></a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
+                        <li class='left_news'>07月09日<a href="#">马蜂窝启动暑期大促金卡会员专享权益全新上线</a></li>
                     </ul>
                 </div>
             </div>
@@ -174,8 +179,9 @@
             <div>
                 <div class='right_nav clearfix'>
                     <ul>
-                        <li class='active'><a href="#">热门游记</a><span class='right_menu'><i class='menu_icon'></i>
-                        筛选</span>
+                        <li class='active'>
+                            <a href="#">热门游记</a>
+                            <span class="screen">筛选</span>
                         </li>
                         <li><a href="#">最新发表</a></li>
                     </ul>
@@ -315,7 +321,25 @@
 
                 </div>
             </div>
-            
+
+
+            <!-- 页数 -->
+            <div class='ye_button'>
+                <span class='count'>共77页 / 922条</span>
+                <span>1</span>
+                <a href="#" class='ye_count'>2</a>
+                <a href="#" class='ye_count'>3</a>
+                <a href="#" class='ye_count'>4</a>
+                <a href="#" class='ye_count'>5</a>
+                <a href="#" class='ye_count'>6</a>
+                <a href="#" class='ye_count'>7</a>
+                <a href="#" class='ye_count'>8</a>
+                <a href="#" class='ye_count'>9</a>
+                <a href="#" class='ye_next'>下一页 >></a>
+
+            </div>
+
+
         </div>
     </div>
 
