--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <ul>
                         <li class='active'>
                             <a href="#">热门游记</a>
-                            <span class="screen">筛选</span>
+                            <span class="screen"><i class='screen_icon'></i>筛选</span>
                         </li>
                         <li><a href="#">最新发表</a></li>
                     </ul>
