--- a/sales.html
+++ b/sales.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>目的地旅游攻略 - 马蜂窝</title>
+    <title>【马蜂窝旅行商城】汇聚全球旅游产品的交易平台 - 马蜂窝自由行</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/destination.css">
+    <link rel="stylesheet" href="css/sales.css">
 </head>
 <body>
     
