--- a/travel.html
+++ b/travel.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>马蜂窝旅游攻略路书下载,旅游攻略,自助游,自由行攻略指南 - 马蜂窝</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/travel.css">
 </head>
 <body>
     
