--- a/hotel.html
+++ b/hotel.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>目的地旅游攻略 - 马蜂窝</title>
+    <title>马蜂窝酒店预订,网上预订酒店,国内外酒店价格查询预订平台</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/destination.css">
+    <link rel="stylesheet" href="css/hotel.css">
 </head>
 <body>
     
